frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: dev.local/app-frontend:v1  # Use the name of your Docker image
          imagePullPolicy: Never
          ports:
            - containerPort: 3000  # Adjust the port as needed
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend  # Match pods with the label "app: frontend"
  ports:
    - name: http
      protocol: TCP
      port: 8080   # Port that the service should listen on
      targetPort: 3000  # Port that the service should forward traffic to
  type: ClusterIP  # This creates a ClusterIP service
