postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
spec:
  selector:
    app: postgresql   # Match pods with the label "app: postgresql"
  ports:
    - name: postgresql
      port: 5432        # Port that the service should listen on
      targetPort: 5432  # Port that the service should forward traffic to
  type: ClusterIP      # This creates a ClusterIP service
